--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://appco-react.themetags.com",
   "dependencies": {
+    "axios": "^0.19.2",
     "react": "^16.11.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.11.0",
